[workspace]
resolver = "1"
members = [
    "game",
    "ring",
    "display"
]

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
log = "0.4.29"
logger = {git = "https://github.com/Bowarc/Crates.git", package = "logger"}
time = {git = "https://github.com/Bowarc/Crates.git", package = "time"}
random = {git = "https://github.com/Bowarc/Crates.git", package = "random"}
math = {git = "https://github.com/Bowarc/Crates.git", package = "math"}
neat = { version = "1.0.2",  features = ["serde"] }
genetic-rs = { version = "1.3.0", features = ["derive"] }
bevy = { version = "0.18.0", default-features = false, features = ["multi_threaded", "keyboard"] }
ron = "0.12.0"
