[package]
name = "display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "display"
path = "src/main.rs"

[dependencies]
game = { path = "../game" }
ring = { path = "../ring" }
enum_dispatch = "0.3.13"
derivative = "2.2.0"

serde = { version = "1.0.228", features = ["derive"] }
ron.workspace = true

spin_sleep = "1.3.3"
log.workspace = true
logger.workspace = true
time.workspace = true
random.workspace = true

neat.workspace = true

strum = "0.28.0"
strum_macros = "0.28.0"
