[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
render = ["bevy/2d"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["std", "multi_threaded", "keyboard"] }
