[package]
name = "ring"
version = "0.1.0"
edition = "2021"

[dependencies]
game = {path = "../game"}
ctrlc = "3.5.2"
log.workspace = true
logger.workspace = true
time.workspace = true
ron.workspace = true
neat.workspace = true
genetic-rs.workspace = true
genetic-rs-extras = { version = "0.1.1", features = ["indicatif", "plotters"] }
bevy.workspace = true
