[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
doodl-jump.workspace = true
ai-player.workspace = true
ctrlc = "3.5.2"
ron.workspace = true
neat.workspace = true
genetic-rs.workspace = true
genetic-rs-extras = { version = "0.1.1", features = ["indicatif", "plotters"] }
# bevy = { workspace = true, features = ["debug"] }
bevy.workspace = true
plotters = "0.3.7"
